mark order as delivered with test and doc
